--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -37,5 +37,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
+<link rel="import" href="yahoo-geo-weather/yahoo-geo-weather.html">
+<link rel="import" href="../bower_components/dashboard-thermometer/dashboard-thermometer.html">
+<link rel="import" href="../bower_components/dashboard-clock-analog/dashboard-clock-analog.html">
+<link rel="import" href="../bower_components/dashboard-clock-digital/dashboard-clock-digital.html">
+<link rel="import" href="../bower_components/dashboard-temperature/dashboard-temperature.html">
+<link rel="import" href="../bower_components/dashboard-calendar-month/dashboard-calendar-month.html">
+<link rel="import" href="../bower_components/dashboard-calendar-day/dashboard-calendar-day.html">
