--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -23,12 +23,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     // Middleware
     function scrollToTop(ctx, next) {
-      app.scrollPageToTop();
+//      app.scrollPageToTop();
       next();
     }
 
     function closeDrawer(ctx, next) {
-      app.closeDrawer();
+//      app.closeDrawer();
       next();
     }
 
@@ -45,18 +45,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
 
-    page('/users', function() {
-      app.route = 'users';
-    });
-
-    page('/users/:name', function(data) {
-      app.route = 'user-info';
-      app.params = data.params;
-    });
-
-    page('/contact', function() {
-      app.route = 'contact';
-    });
+//    page('/users', function() {
+//      app.route = 'users';
+//    });
+//
+//    page('/users/:name', function(data) {
+//      app.route = 'user-info';
+//      app.params = data.params;
+//    });
+//
+//    page('/contact', function() {
+//      app.route = 'contact';
+//    });
 
     // 404
     page('*', function() {
